fixed issue with project images being off centered and changed background color of body

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ html {
 }
 
 body {
-  margin:0
+  margin:0;
+  background-color: #2F4858;
 }
 
 .navigation {
@@ -39,8 +40,8 @@ body {
 }
 
 .navigation a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color:#f2f2f2;
+  color:#E08976;
 }
 
 .copyright {
@@ -86,7 +87,8 @@ figcaption {
 }
 
 #about-me{
-  background-color: ;
+  background-color: #2F4858;
+  color: #f2f2f2;
 }
 
 .headshot {
@@ -104,13 +106,17 @@ figcaption {
   text-align: center;
 }
 
+#tech-skills {
+  background-color: #2F4858;
+  color: #f2f2f2;
+}
+
 .tech-container {
   display: grid;
   grid-template-columns: auto auto auto;
 }
 
 .tech-item {
-  /* border-style: solid; */
   justify-self: center;
   padding: 50px;
 }
@@ -128,10 +134,16 @@ figcaption {
   flex-direction: column;
 }
 
+#my-works {
+  background-color: #2F4858;
+  color: #f2f2f2;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .examples-container {
   display: flex;
   width: 100%;
-  padding: 4% 2%;
+  /* padding: 4% 2%; */
   box-sizing: border-box;
   height: 100vh;
 }
@@ -141,7 +153,7 @@ figcaption {
   overflow: hidden;
   transition: 0.5s;
   margin: 0 2%;
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.5);
   line-height: 0;
 }
 
@@ -169,7 +181,7 @@ figcaption {
 }
 
 footer {
-  background-color: ##634F5F;
+  background-color:;
 }
 
 footer a {
